--- a/requirements.txt
+++ b/requirements.txt
@@ -76,7 +76,7 @@ PyMuPDFb==1.24.6
 PyPDF2==3.0.1
 python-dateutil==2.9.0.post0
 pytz==2024.1
-pypiwin32
+pypiwin32==223
 PyYAML==6.0.1
 pyzmq==26.0.3
 referencing==0.35.1
